@@ -1,3 +1,9 @@
+2001-04-18  Martin M. Hunt  <hunt@redhat.com>
+
+	* top.c (gdb_init): Don't call cli_out_new() to
+	create global uiout if init_ui_hook is set.  uiout will
+	have to be initialized there.
+
 2001-04-18  Andrew Cagney  <ac131313@redhat.com>
 
 	* arch-utils.c: Include "regcache.h".
